--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node start.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/MeteorInfinity/TaxiMan.git"
+  },
   "keywords": [
     "taxi",
     "analysis"
@@ -18,7 +22,7 @@
     "babel-preset-es2015-node6": "0.3.0",
     "babel-preset-stage-3": "6.5.0",
     "gdal": "^0.9.4",
-    "kcors": "^1.3.2",
+    "kcors": "^2.2.1",
     "koa": "2.0.0",
     "koa-bodyparser": "3.2.0",
     "koa-router": "7.0.0",
@@ -27,6 +31,7 @@
     "moment": "^2.17.1",
     "mysql": "2.11.1",
     "mz": "2.4.0",
+    "node-schedule": "^1.2.0",
     "nunjucks": "2.4.2",
     "sequelize": "3.24.1"
   }
