--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-preset-stage-3": "6.5.0",
     "gdal": "^0.9.4",
     "iconv-lite": "^0.4.15",
-    "kcors": "^2.2.1",
+    "kcors": "2.2.1",
     "koa": "2.0.0",
     "koa-bodyparser": "3.2.0",
     "koa-router": "7.0.0",
